[package]
name = "rs-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.27.3"
config = "0.14.0"
dotenv = "0.15"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.128"
hyper = { version = "1.4.1", features = ["full"] }
bytes = "1.7.2"
reqwest = { version = "0.12.8", features = ["json"] }
log = "0.4.22"
env_logger = "0.11.5"

